devops/kubernetes/platform-core/overlays/azure/provider-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-core
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /platform/status
