devops/kubernetes/platform-core/overlays/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-core
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: platform-core.country.example.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-core
                port:
                  number: 80
  tls:
    - hosts:
        - platform-core.country.example.edu
      secretName: platform-core-tls
